# blnm

./: .gitignore  README.md  setup.cfg
.github/workflows/: unittest.yml
blnm/: dist.py  fit.py  utils.py
example/: sim_pars.json  simulate_and_fit.py
test/: test_fit.py  test_utils.py
