[metadata]
name = blnm
version = 0.0.1dev1
description = blnm : sample and fit mixture of binomial logit normal
long_description = file: README.md
license = Apache 2.0
author = Robert Vogel


[options]
packages = 
    blnm
python_requires = >= 3.7
install_requires = 
    numpy >= 1.14.0
    scipy >= 1.0.0
